--- a/www/views/deposit.hbs
+++ b/www/views/deposit.hbs
@@ -45,7 +45,7 @@
 						</ul>
 					</div>
 					<div class="submit_holder">
-						<input type="submit" value="send">
+						<a id="savePicks" class="green_button">Comprar</a>
 					</div>
 			</div>
 		</form>
