--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -231,7 +231,7 @@
 					</div><!-- balance -->
 
 					<div class="botones clarfix">
-						<a id="sendRegister" class="green_button">Registrarse</a>
+						<input type="submit" id="sendRegister" class="green_button" value="Registrarse" />
 					</div>
 				</form>
 			</div><!-- quiniela-registro -->
