--- a/www/views/private.hbs
+++ b/www/views/private.hbs
@@ -9,7 +9,7 @@
 				<input id="name" name="name" type="text" placeholder="Nombre de la quiniela">
 				<input id="password" name="password" type="text" placeholder="Código de la quiniela">
 				<div class="submit_holder">
-					<input type="submit" value="send">
+					<input type="submit" value="Buscar" class="green_button">
 				</div>
 			</form>
 			<section id="insertResults">
