Tab navigation in upcoming (not registered) game, include participants new tab view

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -203,7 +203,6 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela .quiniela_content .quiniela_picks_ok .titulo {text-align: center;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa {width: 25%; float: left;}
 .quiniela.quiniela_open .quiniela_content .quiniela_bolsa span.number {float: left; margin-left: 5px; color: #77BC1F;}
-.quiniela.quiniela_open .quiniela_content .quiniela_bolsa img {margin-top: -2px;}
 
 /*quiniela_live*/
 
@@ -287,6 +286,11 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .partidos .partido .opcion_partido.visitante .equipo span {display: block;}
 .quiniela_single .partidos .partido .opcion_partido.visitante input {float: right; margin-left: 10px;}
 .quiniela_single .partidos .partido .opcion_partido.visitante img {float: right;}
+
+.quiniela_single .partidos .partido .opcion_partido span.linea { width: 33%!important; display: block; margin-top: -1.5rem; color: #FF8D00; font-weight: 700; position: absolute; top: 1.8rem; text-align: center; left: 0; letter-spacing: 1px;}
+.quiniela_single .partidos .partido .opcion_partido span.linea.pd{left: 33%;}
+.quiniela_single .partidos .partido .opcion_partido span.linea.away{left: 66%;}
+
 /*Extra*/
 .quiniela_single .opcion_partido .equipo .iniciales {font-size: 1rem; letter-spacing: 0.5px;}
 .quiniela_single .opcion_partido.empate .check{left: 38%;}
@@ -321,7 +325,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_single .props .prop .dos_opciones .opcion_prop:last-child input {margin-right: 10px;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop {position: relative; width: 33.33%; text-align: center; float: left; padding-left: 5%;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop:nth-of-type(2){ padding: 0.5rem 0;}
-.quiniela_single .props .prop .tres_opciones .opcion_prop:nth-of-type(2) span{ text-align: center; display: block; width: 100%; color: #72bb44;}
+.quiniela_single .props .prop .tres_opciones .opcion_prop:nth-of-type(2) span{ text-align: center; display: block; width: 100%; color: #ff8d00; font-weight: 700; letter-spacing: 1px;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop input {margin-right: 10px;}
 .quiniela_single .props .prop .tres_opciones .opcion_prop img {margin-right: 5px; margin-left: 33%;}
 .quiniela_single .props .prop .cuatro_opciones .opcion_prop {position: relative; width: 25%; text-align: center; float: left; padding-left: 2.5%;}
@@ -425,10 +429,12 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .tabs_quiniela {width: 100%; background: #000; margin-top: 20px;  border-radius: 3px; border: 1px solid #414042;}
 .tabs_quiniela ul {list-style: none; margin: 0; padding: 0px;}
 .tabs_quiniela ul li {display: block; width: 100px; display: table-cell; white-space: nowrap; text-align: center; border-right: 1px solid #414042; height: 22px; padding-top: 3px;}
+.tabs_quiniela.min ul li { width: calc( 95vw /3 ); }
 .tabs_quiniela ul li:last-child {border-right: 0px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; }
 .tabs_quiniela ul li:first-child {border-top-left-radius: 3px; border-bottom-left-radius: 3px; }
 .tabs_quiniela ul li.selected {background: #5ba433;}
 .tabs_quiniela ul li a {text-decoration: none; color: #fff;}
+
 
 .tab_posiciones {width: 100%;}
 .tab_posiciones table {width: 100%; border: none!important; font-size: 10px; text-align: center;}
@@ -439,6 +445,12 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .tab_posiciones table tr.player_info:nth-child(2n){background: #414042}
 .tab_posiciones .player img {width: 16px;  margin-right: 5px;}
 .tab_posiciones .ganar img {width: 16px; margin-right: 5px;}
+
+.tab_posiciones.participants td{ text-align: left; padding: 0.5rem; font-weight: 500; font-size: 0.85rem; letter-spacing: 0.5px; }
+.tab_posiciones.participants tbody{ max-height: 38vh!important; overflow: scroll; display: grid; }
+.tab_posiciones.participants td .profile{ width: 20px; height: 20px; margin: 0 0.5rem 0 0; padding: 0; -moz-border-radius: 50%; border-radius: 50%; display: inline-block; vertical-align: inherit; -webkit-border-radius: 50%; overflow: hidden; }
+.tab_posiciones.participants td .profile>img{ display: block; margin: 0; padding: 0; width: 100%; height: auto;}
+.tab_posiciones.participants sup{ vertical-align: super; font-size: 0.6rem;}
 
 
 .tab_premios { width: 100%;}
@@ -495,7 +507,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .quiniela_privada_crear .deportes_select_crear ul li {margin: 0px; display: block; padding: 10px 0; width: 50%; float: left; text-align: center; font-size: 10px; border-radius: 3px;}
 .quiniela_privada_crear .deportes_select_crear ul li img {margin-right: 5px; width: 16px;}
 .quiniela_privada_crear .deportes_select_crear ul li.selected {background: #5ba433;}
-.quiniela_privada_crear select {width: 100%; color: #fff; border: 1px solid #8A8A8D; border-radius: 3PX; margin-bottom: 10px; background: transparent; font-size: 10px; padding: 10px;}
+.quiniela_privada_crear select {width: 100%; color: #fff; border: 1px solid #8A8A8D; border-radius: 3px; margin-bottom: 10px; background: transparent; font-size: 10px; padding: 10px;}
 .quiniela_privada_crear .checkbox_crear {width: 50%; float: left; font-size: 10px; color: #fff;}
 .quiniela_privada_crear .checkbox_crear input {float: left; margin-right: 10px;}
 
@@ -742,3 +754,137 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 	.tab_profile li .highlight{color: #2196F3;}
 	
 	small.info{ text-align: center; display: block; color: #77bc1f; font-size: 0.85rem; letter-spacing: 1px; }
+
+	/* CSS Created by CSS CHECKBOX */
+	/**********************************/
+	/**** www.CSScheckbox.com *********/
+
+	/*general styles for all CSS Checkboxes*/
+	label {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	}
+
+	input[type=checkbox].css-checkbox {
+		  position: absolute; 
+	    overflow: hidden; 
+	    clip: rect(0 0 0 0); 
+	    height:1px; 
+	    width:1px; 
+	    margin:-1px; 
+	    padding:0;
+	    border:0;
+	}
+
+	input[type=checkbox].css-checkbox + label.css-label {
+		padding-left:20px;
+		height:15px; 
+		display:inline-block;
+		line-height:15px;
+		background-repeat:no-repeat;
+		background-position: 0 0;
+		font-size:15px;
+		vertical-align:middle;
+		cursor:pointer;
+	}
+
+	input[type=checkbox].css-checkbox:checked + label.css-label {
+		background-position: 0 -15px;
+	}
+
+	.css-label{
+		background-image:url(http://csscheckbox.com/checkboxes/dark-check-green.png);
+	}
+
+	/*specific classes related to Checkbox skins*/
+
+	.lite-green-check{background-image:url(http://csscheckbox.com/checkboxes/lite-green-check.png);}
+	.lite-blue-check{background-image:url(http://csscheckbox.com/checkboxes/lite-blue-check.png);}
+	.lite-gray-check{background-image:url(http://csscheckbox.com/checkboxes/lite-gray-check.png);}
+	.lite-cyan-check{background-image:url(http://csscheckbox.com/checkboxes/lite-cyan-check.png);}
+	.lite-orange-check{background-image:url(http://csscheckbox.com/checkboxes/lite-orange-check.png);}
+	.lite-red-check{background-image:url(http://csscheckbox.com/checkboxes/lite-red-check.png);}
+
+	.lite-x-cyan{background-image:url(http://csscheckbox.com/checkboxes/lite-x-cyan.png);}
+	.lite-x-gray{background-image:url(http://csscheckbox.com/checkboxes/lite-x-gray.png);}
+	.lite-x-blue{background-image:url(http://csscheckbox.com/checkboxes/lite-x-blue.png);}
+	.lite-x-orange{background-image:url(http://csscheckbox.com/checkboxes/lite-x-orange.png);}
+	.lite-x-red{background-image:url(http://csscheckbox.com/checkboxes/lite-x-red.png);}
+	.lite-x-green{background-image:url(http://csscheckbox.com/checkboxes/lite-x-green.png);}
+
+	.mac-style{background-image:url(http://csscheckbox.com/checkboxes/mac-style.png);}
+	.mario-style{background-image:url(http://csscheckbox.com/checkboxes/mario-style.png);}
+	.alert-style{background-image:url(http://csscheckbox.com/checkboxes/alert-style.png);}
+	.lite-plus{background-image:url(http://csscheckbox.com/checkboxes/lite-plus.png);}
+	.dark-plus{background-image:url(http://csscheckbox.com/checkboxes/dark-plus.png);}
+	.dark-plus-cyan{background-image:url(http://csscheckbox.com/checkboxes/dark-plus-cyan.png);}
+	.dark-plus-orange{background-image:url(http://csscheckbox.com/checkboxes/dark-plus-orange.png);}
+	.dark-check-cyan{background-image:url(http://csscheckbox.com/checkboxes/dark-check-cyan.png);}
+	.dark-check-green{background-image:url(http://csscheckbox.com/checkboxes/dark-check-green.png);}
+	.dark-check-orange{background-image:url(http://csscheckbox.com/checkboxes/dark-check-orange.png);}
+
+
+	.depressed-lite-small{background-image:url(http://csscheckbox.com/checkboxes/depressed-lite-small.png);}
+	.elegant{background-image:url(http://csscheckbox.com/checkboxes/elegant.png);}
+	.depressed{background-image:url(http://csscheckbox.com/checkboxes/depressed.png);}
+	.chrome-style{background-image:url(http://csscheckbox.com/checkboxes/chrome-style.png);}
+	.web-two-style{background-image:url(http://csscheckbox.com/checkboxes/web-two-style.png);}
+	.vlad{background-image:url(http://csscheckbox.com/checkboxes/vlad.png);}
+	.klaus{background-image:url(http://csscheckbox.com/checkboxes/klaus.png);}
+
+	input[type=checkbox].css-checkbox.med + label.css-label.med {
+		padding-left:22px;
+	    height:17px; 
+		display:inline-block;
+		line-height:17px;
+		background-repeat:no-repeat;
+		background-position: 0 0;
+		font-size:15px;
+		vertical-align:middle;
+	    cursor:pointer;
+	}
+
+	input[type=checkbox].css-checkbox.med:checked + label.css-label.med {
+
+	    background-position: 0 -17px;
+	}
+	input[type=checkbox].css-checkbox.sme + label.css-label.sme {
+		padding-left:22px;
+	    height:16px; 
+		display:inline-block;
+		line-height:16px;
+		background-repeat:no-repeat;
+		background-position: 0 0;
+		font-size:15px;
+		vertical-align:middle;
+	    cursor:pointer;
+	}
+
+	input[type=checkbox].css-checkbox.sme:checked + label.css-label.sme{
+
+	    background-position: 0 -16px;
+	}
+	input[type=checkbox].css-checkbox.lrg + label.css-label.lrg {
+		padding-left: 22px;
+	    height: 20px;
+	    display: inline-block;
+	    line-height: 20px;
+	    background-repeat: no-repeat;
+	    background-position: 0 0;
+	    font-size: 0.85rem;
+	    font-weight: 500;
+	    letter-spacing: 0.5px;
+	    vertical-align: middle;
+	    cursor: pointer;
+	    float: left;
+	}
+
+	input[type=checkbox].css-checkbox.lrg:checked + label.css-label.lrg{
+
+	    background-position: 0 -20px;
+	}
+
