--- a/www/css/style.css
+++ b/www/css/style.css
@@ -429,7 +429,7 @@ a.link_wrapper {color: inherit; text-decoration: none;}
 .tabs_quiniela {width: 100%; background: #000; margin-top: 20px;  border-radius: 3px; border: 1px solid #414042;}
 .tabs_quiniela ul {list-style: none; margin: 0; padding: 0px;}
 .tabs_quiniela ul li {display: block; width: 100px; display: table-cell; white-space: nowrap; text-align: center; border-right: 1px solid #414042; height: 22px; padding-top: 3px;}
-.tabs_quiniela.min ul li { width: calc( 95vw /3 ); }
+.tabs_quiniela.min ul li { width: calc( 62% / 3 )!important; }
 .tabs_quiniela ul li:last-child {border-right: 0px; border-top-right-radius: 3px; border-bottom-right-radius: 3px; }
 .tabs_quiniela ul li:first-child {border-top-left-radius: 3px; border-bottom-left-radius: 3px; }
 .tabs_quiniela ul li.selected {background: #5ba433;}
