--- a/www/views/detail-quiniela.hbs
+++ b/www/views/detail-quiniela.hbs
@@ -74,82 +74,81 @@
 		</div>
 
 		<div id="tabContainer" class="tabs">
-			<div id="insertPartidos" class="partidos clearfix radio_group">
+			<form method="POST" action="" id="picksForm">
+				<input type="hidden" name="entry_id" id="entry_id" value="">
+				<input type="hidden" name="pool_id" id="pool_id" value="{{data.pool.id}}">
+				<div id="insertPartidos" class="partidos clearfix radio_group">
 
-			</div><!-- partidos -->
-		</div><!-- tabContainer -->
+				</div><!-- partidos -->
 
-		{{# data.pool.tiebreakers}}
-			<div class="desempates clearfix">
-				<h3>DESEMPATE</h3>
-					{{# each data.tiebreakers}}
-						{{# if_eq type 'score'}}
-							<div class="desempate desempate_uno clearfix">
-								
-								<div class="desempate_left">
-									<span>{{label}}</span>
-								</div>
-								<div class="desempate_input">
-									<span>LOC</span>
-									<input type="tel" name="desempate_uno_local">
-									<span>-</span>
-									<input type="tel" name="desempate_uno_visitante">
-									<span>VIS</span>
-								</div><!-- desempate_input -->
-							
-							</div><!-- desempate_uno -->
-						{{/ if_eq }}
-
-						{{# if_eq type 'number'}}
-							<div class="desempate desempate_dos clearfix">
-								<div class="desempate_left">
-									<span>{{label}}</span>
-								</div>
-								<div class="desempate_input">
-									<input type="tel" name="desempate_dos_minuto">
-								</div><!-- desempate_input -->
-							</div><!-- desempate_dos -->
-						{{/ if_eq }}
+				<div class="desempates clearfix">
+					<h3>DESEMPATE</h3>
+					{{# each data.tiebreakers_iter}}
+						{{# each .}}
 						
-						{{# if_eq type 'week_goals'}}
-							<div class="desempate desempate_dos clearfix">
-								<div class="desempate_left">
-									<span>{{label}}</span>
-								</div>
-								<div class="desempate_input">
-									<input type="tel" name="desempate_dos_minuto">
-								</div><!-- desempate_input -->
-							</div><!-- desempate_dos -->
-						{{/ if_eq }}
+							{{# if_eq type 'score'}}
+								<div class="desempate desempate_uno clearfix">
+									
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<span>LOC</span>
+										<input type="tel" name="desempate_uno_local">
+										<span>-</span>
+										<input type="tel" name="desempate_uno_visitante">
+										<span>VIS</span>
+									</div><!-- desempate_input -->
+								
+								</div><!-- desempate_uno -->
+							{{/ if_eq }}
 
-						{{# if_eq type 'other'}}
-							<div class="desempate desempate_tres clearfix">
-								<div class="desempate_left">
-									<span>{{label}}</span>
-								</div>
-								<div class="desempate_input">
-									<span>SI</span>
-									<input type="radio" name="desempate_tres" value="si">
-									<span>NO</span>
-									<input type="radio" name="desempate_tres" value="no">
-								</div><!-- desempate_input -->
-							</div><!-- desempate_tres -->
-						{{/ if_eq }}
+							{{# if_eq type 'number'}}
+								<div class="desempate desempate_dos clearfix">
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<input type="tel" name="desempate_dos_minuto">
+									</div><!-- desempate_input -->
+								</div><!-- desempate_dos -->
+							{{/ if_eq }}
+							
+							{{# if_eq type 'week_goals'}}
+								<div class="desempate desempate_dos clearfix">
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<input type="tel" name="desempate_dos_minuto">
+									</div><!-- desempate_input -->
+								</div><!-- desempate_dos -->
+							{{/ if_eq }}
+
+							{{# if_eq type 'other'}}
+								<div class="desempate desempate_tres clearfix">
+									<div class="desempate_left">
+										<span>{{label}}</span>
+									</div>
+									<div class="desempate_input">
+										<span>SI</span>
+										<input type="radio" name="desempate_tres" value="si">
+										<span>NO</span>
+										<input type="radio" name="desempate_tres" value="no">
+									</div><!-- desempate_input -->
+								</div><!-- desempate_tres -->
+							{{/ if_eq }}
+						{{/ each}}
 					{{/ each}}
 
-			</div><!-- dempates -->
-		{{/ data.pool.tiebreakers }}
+				</div><!-- dempates -->
+				<small class="info">Se tomarán los resultados únicamente de tiempo reglamentario. (No tiempos extras)</small>
+				<a id="savePicks" class="green_button">Guardar picks</a>
+			</form>
+		</div><!-- tabContainer -->
 
 	{{/ data.closed}}
 		
-	{{# data.pool.closed}}
-
-		<div id="insertResults" class="results clearfix">
-			Inserte resultados
-		</div><!-- partidos -->
-
-	{{/ data.pool.closed}}
-
 	{{^ data.pool.closed}}		
 		<div id="registerNow" class="backed_modal clearfix" style="display: none;">
 			<div class="quiniela_registro clearfix">
@@ -249,5 +248,5 @@
 
 		</div><!-- quiniela_registro_overlay -->
 	{{/ data.pool.closed}}
-		<a id="savePicks" class="green_button">Guardar picks</a>
+		
 	</div><!-- content -->
